--- a/vue-auth-system/package.json
+++ b/vue-auth-system/package.json
@@ -1,24 +1,29 @@
 {
   "name": "vue-auth-system",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
+  "type": "module",
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@vitejs/plugin-vue": "^6.0.1",
     "axios": "^1.11.0",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "pinia": "^2.3.1",
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@vitejs/plugin-vue": "^6.0.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.17",
     "vite": "^7.0.6",
-    "vite-plugin-full-reload": "^1.2.0"
+    "vite-plugin-vue-devtools": "^8.0.0"
   }
 }
