--- a/vue-auth-system/package.json
+++ b/vue-auth-system/package.json
@@ -9,21 +9,32 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@vee-validate/yup": "^4.15.1",
     "axios": "^1.11.0",
     "pinia": "^2.3.1",
-    "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vee-validate": "^4.15.1",
+    "vue-router": "^4.5.1",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@types/node": "^24.2.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/runtime-core": "^3.5.18",
+    "@vue/runtime-dom": "^3.5.18",
+    "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "vite": "^7.0.6",
-    "vite-plugin-vue-devtools": "^8.0.0"
+    "typescript": "^5.9.2",
+    "vite": "^7.1.1",
+    "vite-plugin-vue-devtools": "^8.0.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vue": "^3.5.18",
+    "vue-tsc": "^3.0.5"
   }
 }
