learning about state management

--- a/vue-auth-system/tsconfig.json
+++ b/vue-auth-system/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
+    "lib": ["es2019", "dom"],
     "module": "ESNext",
     "moduleResolution": "Node",
     "strict": true,
@@ -12,7 +13,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "types": ["vite/client"]
+    "types": ["vite/client", "@tanstack/vue-query"]
   },
   "include": [
     "src/**/*.ts",
