--- a/vue-auth-system/package.json
+++ b/vue-auth-system/package.json
@@ -13,8 +13,10 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.83.1",
     "@vee-validate/yup": "^4.15.1",
     "axios": "^1.11.0",
+    "dompurify": "^3.2.6",
     "pinia": "^2.3.1",
     "vee-validate": "^4.15.1",
     "vue-router": "^4.5.1",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^24.2.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/runtime-core": "^3.5.18",
