--- a/vue-auth-system/package.json
+++ b/vue-auth-system/package.json
@@ -13,9 +13,11 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@tanstack/vue-query": "^5.83.1",
     "@vee-validate/yup": "^4.15.1",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
     "pinia": "^2.3.1",
     "vee-validate": "^4.15.1",
