--- a/auth-system/composer.json
+++ b/auth-system/composer.json
@@ -9,10 +9,14 @@
         "php": "^8.2",
         "bacon/bacon-qr-code": "^3.0",
         "ezyang/htmlpurifier": "^4.18",
+        "fruitcake/php-cors": "1.3.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1",
-        "pragmarx/google2fa-laravel": "^2.0"
+        "laravel/tinker": "2.10.1",
+        "mongodb/mongodb": "^1.21",
+        "pestphp/pest-plugin-laravel": "3.2.0",
+        "pragmarx/google2fa-laravel": "^2.0",
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^14.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
