--- a/vue-auth-system/package.json
+++ b/vue-auth-system/package.json
@@ -29,6 +29,7 @@
     "tsparticles": "^3.9.1",
     "vee-validate": "^4.15.1",
     "vue-router": "^4.5.1",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-lazyload": "^0.3.8",
     "yup": "^1.7.0"
   },
