--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      # 3️⃣ Add server to known_hosts to avoid host key verification error
+      # 3️⃣ Add server to known_hosts to avoid host key verification errors
       - name: Add server to known_hosts
         run: |
           mkdir -p ~/.ssh
@@ -37,32 +37,31 @@ jobs:
             BRANCH=master
 
             # Navigate to project folder or create if missing
-            cd $PROJECT_DIR || {
+            cd \$PROJECT_DIR || {
               echo 'Creating portfolio folder...'
-              sudo mkdir -p $PROJECT_DIR
-              cd $PROJECT_DIR
+              sudo mkdir -p \$PROJECT_DIR
+              cd \$PROJECT_DIR
             }
 
-            echo 'Updating repository...'
-            # Pull if repo exists, clone if not
+            # Pull latest code safely
             if [ -d .git ]; then
               echo 'Pulling latest code...'
-              git fetch origin $BRANCH
-              git reset --hard origin/$BRANCH
+              git fetch origin \$BRANCH
+              git reset --hard origin/\$BRANCH
             else
               echo 'Cloning repository...'
-              git clone $REPO_URL .
+              git clone \$REPO_URL .
             fi
 
-            # Create .env files from secrets
-            echo '${{ secrets.ENV_FILE }}' > .env.production
-            echo '${{ secrets.ENV_FRONTEND_FILE }}' > .env.frontend
+            # Create .env files from GitHub Secrets
+            echo '\${{ secrets.ENV_FILE }}' > .env.production
+            echo '\${{ secrets.ENV_FRONTEND_FILE }}' > .env.frontend
 
             # Stop existing Docker containers
             echo 'Stopping existing containers...'
             docker-compose -f docker-compose.prod.yml down || true
 
-            # Start containers
+            # Start Docker containers
             echo 'Starting containers...'
             docker-compose -f docker-compose.prod.yml up -d --build
 
@@ -70,7 +69,7 @@ jobs:
             echo 'Waiting for Laravel container to start...'
             sleep 30
 
-            # Run Laravel commands
+            # Run Laravel artisan commands
             echo 'Running Laravel commands...'
             docker exec laravel-backend php artisan key:generate --force
             docker exec laravel-backend php artisan migrate --force
