--- a/docker-stack/docker-compose.yml
+++ b/docker-stack/docker-compose.yml
@@ -11,9 +11,7 @@ volumes:
 
 services:
 
-  # -----------------------
-  # Laravel Backend (PHP-FPM)
-  # -----------------------
+  # Laravel Backend
   laravel:
     build:
       context: ../auth-system
@@ -25,8 +23,8 @@ services:
       - ../auth-system/config:/var/www/config:cached
       - ../auth-system/graphql:/var/www/graphql:cached
       - ../auth-system/database:/var/www/database:cached
-      - /var/www/vendor 
-      - /var/www/storage 
+      - /var/www/vendor
+      - /var/www/storage
     expose:
       - "9000"
     depends_on:
@@ -36,6 +34,7 @@ services:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
+    # 👇 pick correct .env based on APP_ENV
     env_file:
       - ../auth-system/.env
     networks:
@@ -46,9 +45,7 @@ services:
       timeout: 5s
       retries: 5
 
-  # -----------------------
-  # Laravel Worker (Queue)
-  # -----------------------
+  # Laravel Worker
   laravel-worker:
     build:
       context: ../auth-system
@@ -72,9 +69,7 @@ services:
     networks:
       - appnet
 
-  # -----------------------
-  # Nginx (Reverse Proxy for Laravel)
-  # -----------------------
+  # Nginx
   nginx:
     image: nginx:alpine
     container_name: nginx
@@ -89,9 +84,7 @@ services:
     networks:
       - appnet
 
-  # -----------------------
-  # Vue Frontend (Vite Dev)
-  # -----------------------
+  # Vue (Vite)
   vue:
     build:
       context: ../vue-auth-system
@@ -100,7 +93,7 @@ services:
     volumes:
       - ../vue-auth-system/src:/app/src:cached
       - ../vue-auth-system/tests:/app/tests:cached
-      - node_modules_vue:/app/node_modules       # keep node_modules inside container
+      - node_modules_vue:/app/node_modules
     ports:
       - "${VITE_PORT:-5173}:5173"
     environment:
@@ -110,9 +103,7 @@ services:
     networks:
       - appnet
 
-  # -----------------------
   # MySQL
-  # -----------------------
   mysql:
     image: mysql:8.0
     container_name: mysql-db
@@ -131,9 +122,7 @@ services:
       timeout: 5s
       retries: 10
 
-  # -----------------------
-  # MongoDB
-  # -----------------------
+  # Mongo
   mongo:
     image: mongo:6
     container_name: mongo-db
@@ -149,9 +138,7 @@ services:
       timeout: 5s
       retries: 10
 
-  # -----------------------
   # RabbitMQ
-  # -----------------------
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
@@ -171,9 +158,7 @@ services:
       timeout: 5s
       retries: 10
 
-  # -----------------------
   # phpMyAdmin
-  # -----------------------
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     container_name: phpmyadmin
