--- a/docker-stack/nginx/default.conf
+++ b/docker-stack/nginx/default.conf
@@ -1,24 +1,52 @@
 server {
     listen 80;
     server_name localhost;
-    root /var/www/public;
+
+    # Root for Laravel
+    root /var/www/html/portfolio/auth-system/public;
 
     index index.php index.html;
 
+    # Serve Vue dev server on / (only in dev)
     location / {
+        # For production build, uncomment this
+        # root /var/www/html/portfolio/vue-auth-system/dist;
+        # try_files $uri /index.html;
+
+        # For dev, proxy to Vite container
+        proxy_pass http://vue-frontend:5173;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Laravel API routes
+    location /api/ {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # GraphQL endpoint (if you use it)
+    location /graphql {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    # PHP-FPM processing
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass laravel-backend:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
+    # Deny access to .htaccess
     location ~ /\.ht {
         deny all;
     }
+
+    # Optional: logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 }
