--- a/docker-stack/docker-compose.yml
+++ b/docker-stack/docker-compose.yml
@@ -11,22 +11,31 @@ volumes:
 
 services:
 
+  # -----------------------
   # Laravel Backend
+  # -----------------------
   laravel:
     build:
       context: ../auth-system
       dockerfile: Dockerfile
     container_name: laravel-backend
     volumes:
-      - ../auth-system/app:/var/www/app:cached
-      - ../auth-system/routes:/var/www/routes:cached
-      - ../auth-system/config:/var/www/config:cached
-      - ../auth-system/graphql:/var/www/graphql:cached
-      - ../auth-system/database:/var/www/database:cached
-      - /var/www/vendor
-      - /var/www/storage
+      # Only mount editable folders
+      - ../auth-system/app:/var/www/html/portfolio/auth-system/app:cached
+      - ../auth-system/routes:/var/www/html/portfolio/auth-system/routes:cached
+      - ../auth-system/config:/var/www/html/portfolio/auth-system/config:cached
+      - ../auth-system/graphql:/var/www/html/portfolio/auth-system/graphql:cached
+      - ../auth-system/database:/var/www/html/portfolio/auth-system/database:cached
+
+      # Let container manage heavy folders for performance
+      - /var/www/html/portfolio/auth-system/vendor
+      - /var/www/html/portfolio/auth-system/storage
     expose:
       - "9000"
+    env_file:
+      - ../auth-system/.env
+    networks:
+      - appnet
     depends_on:
       mysql:
         condition: service_healthy
@@ -34,18 +43,15 @@ services:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
-    # 👇 pick correct .env based on APP_ENV
-    env_file:
-      - ../auth-system/.env
-    networks:
-      - appnet
     healthcheck:
       test: ["CMD-SHELL", "php -v || exit 1"]
       interval: 20s
       timeout: 5s
       retries: 5
 
+  # -----------------------
   # Laravel Worker
+  # -----------------------
   laravel-worker:
     build:
       context: ../auth-system
@@ -53,6 +59,14 @@ services:
     container_name: laravel-worker
     command: php artisan queue:work --queue=domain-events,default --sleep=1 --tries=5
     restart: always
+    volumes:
+      - ../auth-system/app:/var/www/html/portfolio/auth-system/app:cached
+      - /var/www/html/portfolio/auth-system/vendor
+      - /var/www/html/portfolio/auth-system/storage
+    env_file:
+      - ../auth-system/.env
+    networks:
+      - appnet
     depends_on:
       laravel:
         condition: service_healthy
@@ -60,31 +74,26 @@ services:
         condition: service_healthy
       mongo:
         condition: service_healthy
-    volumes:
-      - ../auth-system/app:/var/www/app:cached
-      - /var/www/vendor
-      - /var/www/storage
-    env_file:
-      - ../auth-system/.env
-    networks:
-      - appnet
 
+  # -----------------------
   # Nginx
+  # -----------------------
   nginx:
     image: nginx:alpine
     container_name: nginx
     ports:
       - "${NGINX_PORT:-8000}:80"
     volumes:
-      - ../auth-system:/var/www:cached
+      - ../auth-system:/var/www/html/portfolio/auth-system:cached
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      laravel:
-        condition: service_healthy
+      - laravel
     networks:
       - appnet
 
-  # Vue (Vite)
+  # -----------------------
+  # Vue Frontend (Vite)
+  # -----------------------
   vue:
     build:
       context: ../vue-auth-system
@@ -103,7 +112,9 @@ services:
     networks:
       - appnet
 
+  # -----------------------
   # MySQL
+  # -----------------------
   mysql:
     image: mysql:8.0
     container_name: mysql-db
@@ -122,7 +133,9 @@ services:
       timeout: 5s
       retries: 10
 
+  # -----------------------
   # Mongo
+  # -----------------------
   mongo:
     image: mongo:6
     container_name: mongo-db
@@ -138,7 +151,9 @@ services:
       timeout: 5s
       retries: 10
 
+  # -----------------------
   # RabbitMQ
+  # -----------------------
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
@@ -158,7 +173,9 @@ services:
       timeout: 5s
       retries: 10
 
+  # -----------------------
   # phpMyAdmin
+  # -----------------------
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     container_name: phpmyadmin
