--- a/vue-auth-system/package.json
+++ b/vue-auth-system/package.json
@@ -44,6 +44,7 @@
     "@graphql-codegen/typescript": "^4.1.6",
     "@graphql-codegen/typescript-apollo-client-helpers": "^3.0.1",
     "@graphql-codegen/typescript-operations": "^4.6.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^24.2.0",
