--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,8 +56,8 @@ jobs:
             ##############################
             # Deploy .env files safely
             ##############################
-            echo "${{ secrets.ENV_FILE_BASE64 }}" | base64 -d > $LARAVEL_DIR/.env
-            echo "${{ secrets.ENV_FRONTEND_FILE_BASE64 }}" | base64 -d > $FRONTEND_DIR/.env
+            echo "${{ secrets.ENV_FILE }}" | base64 -d > $LARAVEL_DIR/.env
+            echo "${{ secrets.ENV_FRONTEND_FILE }}" | base64 -d > $FRONTEND_DIR/.env
             sudo chown $USER:$USER $LARAVEL_DIR/.env $FRONTEND_DIR/.env
 
             ##############################
@@ -70,7 +70,7 @@ jobs:
             # Build & start containers
             ##############################
             echo "Starting containers..."
-            docker compose -f docker-stack/docker-compose.yml up -d --build
+            docker compose -p portfolio up -d --build
 
             ##############################
             # Wait for Laravel container to be ready
