--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,9 +58,10 @@ jobs:
             # Deploy .env files safely
             ##############################
             mkdir -p "$LARAVEL_DIR" "$FRONTEND_DIR"
-            echo "${{ secrets.ENV_FILE }}" | base64 -d > "$LARAVEL_DIR/.env"
-            echo "${{ secrets.ENV_FRONTEND_FILE }}" | base64 -d > "$FRONTEND_DIR/.env"
+            echo "${{ secrets.ENV_FILE }}" > "$LARAVEL_DIR/.env"
+            echo "${{ secrets.ENV_FRONTEND_FILE }}" > "$FRONTEND_DIR/.env"
             chmod 600 "$LARAVEL_DIR/.env" "$FRONTEND_DIR/.env"
+
 
             ##############################
             # Stop existing containers
